--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -21,7 +21,7 @@
 
     <section class="historia">
         <h2>Nossa História</h2>
-        <p></p>
+        <p>A Orus é uma empresa inovadora no mercado de jogos, reconhecida pela sua excelência em criar experiências imersivas e envolventes para os jogadores. Com uma equipe de desenvolvedores apaixonados e criativos, a Orus se destaca pela combinação única de tecnologia de ponta, design inovador e narrativa envolvente, oferecendo produtos que encantam os gamers de todas as idades. A empresa busca sempre explorar novas fronteiras do entretenimento digital, com foco em qualidade e inovação, garantindo que cada jogo seja uma jornada inesquecível. Seja no mundo dos jogos de ação, estratégia ou aventura, a Orus se empenha para proporcionar aos seus usuários uma experiência de jogo única, transformando cada partida em uma nova história a ser vivida. </p>
     </section>
 
     <section class="valores">
