--- a/pagina1.html
+++ b/pagina1.html
@@ -12,16 +12,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Descontos</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
-        <div class="logo">
-            <a href="#">
-                <img src="" height="70px">
-            </a>
-        </div>
     </header>
     
     <main>
