--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -8,16 +8,17 @@
 </head>
 <body>
 
-    <header>
-        <h1>Sobre a Nossa Loja</h1>
-        <nav>
-            <ul>
-                <li><a href="home.html">Início</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <img src="logo.png" alt="">
+    <h1>Sobre a Nossa Loja</h1>
+    <nav>
+        <ul>
+            <li><a href="home.html">Início</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+    </nav>
+</header>
 
     <section class="historia">
         <h2>Nossa História</h2>
@@ -53,7 +54,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Nossa Loja - Todos os direitos reservados.</p>
+        <p>&copy; 2025 Orus - Todos os direitos reservados.</p>
     </footer>
 
 </body>
