--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -9,12 +9,12 @@
 <body>
 
 <header>
-    <img src="logo.png" alt="">
+    <img src="/fotos-jogos/logo.png" alt="">
     <h1>Sobre a Nossa Loja</h1>
     <nav>
         <ul>
-            <li><a href="home.html">Início</a></li>
-            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="/homev1.0/home.html">Início</a></li>
+            <li><a href="/conteudo/pagina1.html">Produtos</a></li>
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
