--- a/conteudo/pagina2.html
+++ b/conteudo/pagina2.html
@@ -31,29 +31,29 @@
             <div class="games">
                 <div class="game-card">
                     <a href="#">
-                        <img src="/fotos-jogos/zelda.png" height="300px">
+                        <img src="/fotos-jogos/zelda.jpg" height="300px">
                     </a>
 
                     <p>The legend of Zelda Ocarina of time - 1998</p>
-                    <p>R$29,99</p>
+                    <p>R$129,99</p>
 
                 </div>
                 <div class="game-card">
                     <a href="#">
-                        <img src="/fotos-jogos/mkX.avif" height="300px" >
+                        <img src="/fotos-jogos/castlevania.jfif" height="300px" >
                     </a>
 
-                    <p>Mortal Kombat 10 - 2015</p>
-                    <p>R$79,99</p>
+                    <p>Castlevania: Symphony of the Night - 1997</p>
+                    <p>R$19,99</p>
 
                 </div>
                 <div class="game-card">
                     <a href="#">
-                        <img src="/fotos-jogos/gta.png" height="300px">
+                        <img src="/fotos-jogos/God Of War.jfif" height="300px">
                     </a>
 
-                    <p>Gta San Andreas - 2004</p>
-                    <p>R$124,99</p>
+                    <p>God Of War III - 2010</p>
+                    <p>R$109,99</p>
 
                 </div>
             </div>
@@ -63,28 +63,28 @@
             <div class="games">
                 <div class="game-card">
                     <a href="#">
-                        <img src="/fotos-jogos/fifa.jpg" height="300px">
+                        <img src="/fotos-jogos/digimon.jfif" height="300px">
                     </a>
 
-                    <p>Fifa 20 - 2019</p>
-                    <p>R$289,99</p>
+                    <p>Digimon Rumble Arena - 2002</p>
+                    <p>R$9,99</p>
                 </div>
     
                 <div class="game-card">
                     <a href="#">
-                        <img src="/fotos-jogos/codmw2.jpg" height="300px">
+                        <img src="/fotos-jogos/pokemon fire red.jpg" height="300px">
                     </a>
 
-                    <p>Call of Duty Modern Warfare - 2009</p>
-                    <p>R$219,99</p>
+                    <p>Pokemon Fire Red - 2004</p>
+                    <p>R$14,99</p>
                 </div>
                 <div class="game-card">
                     <a href="#">
-                        <img src="/fotos-jogos/l4d.jpg" height="300px">
+                        <img src="/fotos-jogos/Left4Dead_Windows_cover.jpg" height="300px">
                     </a>
 
                     <p>Left 4 Dead - 2008</p>
-                    <p>R$117,99</p>
+                    <p>R$9,99</p>
                 </div>
             </div>
         </section>
