--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -9,13 +9,13 @@
 <body>
 
 <header>
-    <img src="/fotos-jogos/logo.png" alt="">
+    <img src="logo.png" alt="">
     <h1>Sobre a Nossa Loja</h1>
     <nav>
         <ul>
             <li><a href="/homev2.0/home.html">Início</a></li>
             <li><a href="/conteudo/pagina1.html">Produtos</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="/contato.html">Contato</a></li>
         </ul>
     </nav>
 </header>
@@ -47,7 +47,7 @@
                 <p><strong>José Carlos</strong> - Gerente de Vendas</p>
             </div>
             <div class="membro">
-                <img src="atendente.jpg" alt="Foto do Atendente">
+                <img src="/fts-equipe/zepla.jpg" alt="Foto do Atendente">
                 <p><strong>José Ezequiel</strong> - Atendimento ao Cliente</p>
             </div>
         </div>
