--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
     <div class="container">
         <h1>Contato</h1>
         <div class="box">
-            <p>Estamos aqui para ajudar você! Se tiver dúvidas, sugestões ou precisar de mais informações sobre nossos produtos/serviços, não hesite em nos enviar uma mensagem. Nossos serviços de entrega de jogos físicos são sempre cuidadosos. Caso ocorra algum problema, nosso suporte via WhatsApp estará sempre à disposição para atender e resolver seu problema. Nossa equipe está pronta para responder o mais rápido possível. Se tiver uma reclamação sobre nossos serviços ou sistema, preencha nosso formulário "Reclame Aqui" via Email. Sua opinião é muito importante para nós! &#128513;</p>
+            <p>Estamos aqui para ajudar você! Se tiver dúvidas, sugestões ou precisar de mais informações sobre nossos produtos/serviços, não hesite em nos enviar uma mensagem. Nossos serviços de entrega de jogos físicos são sempre cuidadosos , caso ocorra algum problema nosso suporte whatsapp estará sempre a disposição para atender e resolver seu problema  .  Nossa equipe está pronta para responder o mais rápido possível. se também tiver uma reclamação para fazer sobre nossos serviços ou nosso sistema preencha nosso formulário no reclame aqui, afinal sua opinião é muito importante para nós &#128513;</p>
             
             <div class="redes">
                 <ul>
