--- a/conteudo/pagina2.html
+++ b/conteudo/pagina2.html
@@ -90,6 +90,12 @@
         </section>
     </main>
 
+    <div class="pagination">
+        <a href="pagina1.html"><button>1</button></a>
+        <a href="pagina2.html"><button>2</button></a>
+        <a href="pagina3.html"><button>3</button></a>
+    </div>
+
     <footer>
         <p>&copy; 2025 Orus - Todos os direitos reservados.</p>
     </footer>
