--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -8,17 +8,16 @@
 </head>
 <body>
 
-<header>
-    <img src="logo.png" alt="">
-    <h1>Sobre a Nossa Loja</h1>
-    <nav>
-        <ul>
-            <li><a href="/homev2.0/home.html">Início</a></li>
-            <li><a href="/conteudo/pagina1.html">Produtos</a></li>
-            <li><a href="/contato.html">Contato</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Orus Games Logo" height="80">
+        </div>
+        <nav class="sidebar">
+            <a href="/Homev3.0/home.html">Home</a>
+            <a href="/conteudo/pagina1.html">Produtos</a>
+            <a href="/contato.html">Contato</a>
+        </nav>
+    </header>
 
     <section class="historia">
         <h2>Nossa História</h2>
