--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -38,8 +38,8 @@
         <h2>Nosso Time</h2>
         <div class="membros">
             <div class="membro">
-                <img src="ceo.jpg" alt="Foto do CEO">
-                <p><strong>Gilvan Ricaom</strong> - CEO</p>
+                <img src="/fts-equipe/ricaom.jpg" alt="Foto do CEO">
+                <p><strong>G. Ricaom</strong> - CEO</p>
             </div>
             <div class="membro">
                 <img src="gerente.jpg" alt="Foto do Gerente">
@@ -47,7 +47,7 @@
             </div>
             <div class="membro">
                 <img src="/fts-equipe/zepla.jpg" alt="Foto do Atendente">
-                <p><strong>José Ezequiel</strong> - Atendimento ao Cliente</p>
+                <p><strong>J. Ezequiel</strong> - Atendimento ao Cliente</p>
             </div>
         </div>
     </section>
