--- a/Loginv2.0/login.html
+++ b/Loginv2.0/login.html
@@ -19,12 +19,14 @@
 
             <div class="login">
                 <p>Insira seu email:</p>
-                <input type="email" placeholder="emailteste@gmail.com">
+                <input type="email" placeholder="email">
                 <p>Insira sua senha:</p>
                 <input type="password">
 
             <div class="a-botao">
-                <p id="botao">Login</p>
+                <a href="home.html">
+                    <p id="botao">Login</p>
+                </a>
             </div>
             
             </div>
