arrumando e colocando responsividade
reponsividade e arrumando os arquivos
prox passo: terminar responsividade e colocar um arquivo readme.md

--- a/Loginv2.0/login.html
+++ b/Loginv2.0/login.html
@@ -24,7 +24,7 @@
                 <input type="password">
 
             <div class="a-botao">
-                <a href="home.html">
+                <a href="/Homev4.0/home.html">
                     <p id="botao">Login</p>
                 </a>
             </div>
