--- a/pag_sobre/sobre.html
+++ b/pag_sobre/sobre.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
             <img src="logo.png" alt="Orus Games Logo" height="80">
         </div>
         <nav class="sidebar">
-            <a href="/Homev3.0/home.html">Home</a>
+            <a href="/Homev4.0/home.html">Home</a>
             <a href="/conteudo/pagina1.html">Produtos</a>
-            <a href="/contato.html">Contato</a>
+            <a href="/contato/contato.html">Contato</a>
         </nav>
     </header>
 
@@ -42,7 +42,7 @@
                 <p><strong>G. Ricaom</strong> - CEO</p>
             </div>
             <div class="membro">
-                <img src="gerente.jpg" alt="Foto do Gerente">
+                <img src="/fts-equipe/zegoleiro.png" alt="Foto do Gerente">
                 <p><strong>José Carlos</strong> - Gerente de Vendas</p>
             </div>
             <div class="membro">
