--- a/conteudo/pagina2.html
+++ b/conteudo/pagina2.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orus Games</title>
     
-    <link rel="stylesheet" href="pagina2.css">    
+    <link rel="stylesheet" href="paginas.css">    
 
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/homev3.0/home.html">Home</a></li>
-                <li><a href="/contato.html">Contato</a></li>
+                <li><a href="/homev4.0/home.html">Home</a></li>
+                <li><a href="/contato/contato.html">Contato</a></li>
                 <li><a href="/pag_sobre/sobre.html">Sobre</a></li>
             </ul>
         </nav>
